Refactoring in header component, removed some animations on mobile view, repaired lang selector display on mobile devices

--- a/src/sass/layout/_contact-page.scss
+++ b/src/sass/layout/_contact-page.scss
@@ -45,6 +45,10 @@
     );
     animation: moveInLeft 3s ease 0.5s both;
 
+    &--mobile {
+      animation: none;
+    }
+
     &:active,
     &:focus {
       outline: none;
